@@ -11,7 +11,7 @@
     Thanks to members of the worldwide <ulink
     url="http://developer.gnome.org/projects/gtp/">GNOME Translation
     Project</ulink>, under the leadership of Christian Rose, Kjartan Maraas, and Danilo Segan
-    GNOME &version; offers support for xx languages (at least 80 percent of
+    GNOME &version; offers support for 36 languages (at least 80 percent of
     strings translated).
 
 <!--
@@ -38,54 +38,49 @@
     <!-- languages on the list that are currently under quota, are marked with
     their current translation count -->
     <itemizedlist>
-      <listitem><para>Albanian (5 million speakers)</para></listitem>
-      <!-- 75.78% --><listitem><para>Arabic (235 million)</para></listitem>
-      <listitem><para>Azerbaijani (28 million)</para></listitem>
-      <listitem><para>Basque (0.5 million)</para></listitem>
-      <!-- 67.39% --><listitem><para>Belarusian (7 million)</para></listitem>
-      <!-- 74.43% --><listitem><para>Bengali (189 million)</para></listitem>
-      <listitem><para>Brazilian Portuguese (175 million)</para></listitem>
-      <listitem><para>Bulgarian (9 million)</para></listitem>
-      <listitem><para>Catalan (7 million)</para></listitem>
-      <listitem><para>Chinese Simplified (over 1 billion)</para></listitem>
-      <!-- 63.58% --><listitem><para>Chinese Traditional (40 million)</para></listitem>
-      <!-- 79.48% --><listitem><para>Croation (5 million)</para></listitem>
-      <listitem><para>Czech (11 million)</para></listitem>
-      <listitem><para>Danish (5.3 million)</para></listitem>
-      <listitem><para>Dutch (over 21 million)</para></listitem>
-      <listitem><para>English (341 million)</para></listitem>
-      <listitem><para>Finnish (over 5 million)</para></listitem>
-      <listitem><para>French (over 75 million)</para></listitem>
-      <listitem><para>German (100 million)</para></listitem>
-      <listitem><para>Greek (15 million)</para></listitem>
-      <listitem><para>Gujarati (46 million)</para></listitem>
-      <listitem><para>Hungarian (14.5 million)</para></listitem>
-      <listitem><para>Italian (60 million)</para></listitem>
-      <listitem><para>Japanese (over 125 million)</para></listitem>
-      <listitem><para>Korean (75 million)</para></listitem>
-      <listitem><para>Lithuanian (4 million)</para></listitem>
-      <!-- 76.33% --><listitem><para>Malay (over 17 million)</para></listitem>
-      <!-- 76.74% --><listitem><para>Monglolian (10 million)</para></listitem>
-      <listitem><para>Norwegian bokm&aring;l (5 million)</para></listitem>
-      <listitem><para>Panjabi (60 million)</para></listitem>
-      <listitem><para>Polish (44 million)</para></listitem>
-      <listitem><para>Portuguese (43 million)</para></listitem>
-      <!-- 54.80% --><listitem><para>Romanian (26 million)</para></listitem>
-      <listitem><para>Russian (170 million)</para></listitem>
-      <listitem><para>Serbian (10 million)</para></listitem>
-      <listitem><para>Spanish (over 350 million)</para></listitem>
-      <listitem><para>Swedish (9 million)</para></listitem>
-      <listitem><para>Tamil (61 million)</para></listitem>
-      <!-- 71.01% --><listitem><para>Turkish (150 million)</para></listitem>
-      <listitem><para>Ukranian (50 million)</para></listitem>
-      <!-- 72.18% --><listitem><para>Welsh (575,000)</para></listitem></itemizedlist>
+      <!-- 100.00% --><listitem><para>Albanian (5 million speakers)</para></listitem>
+      <!-- 95.30% --><listitem><para>Arabic (235 million)</para></listitem>
+      <!-- 92.12% --><listitem><para>Azerbaijani (28 million)</para></listitem>
+      <!-- 84.37% --><listitem><para>Basque (580,000)</para></listitem>
+      <!-- 90.41% --><listitem><para>Bengali (189 million)</para></listitem>
+      <!-- 99.98% --><listitem><para>Brazilian Portuguese (175 million)</para></listitem>
+      <!-- 88.89% --><listitem><para>Bulgarian (9 million)</para></listitem>
+      <!-- 84.76% --><listitem><para>Catalan (7 million)</para></listitem>
+      <!-- 98.79% --><listitem><para>Chinese Simplified (over 1 billion)</para></listitem>
+      <!-- 99.97% --><listitem><para>Czech (11 million)</para></listitem>
+      <!-- 98.90% --><listitem><para>Danish (5.3 million)</para></listitem>
+      <!-- 99.22% --><listitem><para>Dutch (over 21 million)</para></listitem>
+      <!-- 0.00% --><listitem><para>English (341 million)</para></listitem>
+      <!-- 99.72% --><listitem><para>Finnish (over 5 million)</para></listitem>
+      <!-- 84.59% --><listitem><para>French (over 75 million)</para></listitem>
+      <!-- 99.96% --><listitem><para>German (100 million)</para></listitem>
+      <!-- 99.07% --><listitem><para>Greek (15 million)</para></listitem>
+      <!-- 100.00% --><listitem><para>Gujarati (46 million)</para></listitem>
+      <!-- 82.66% --><listitem><para>Hindi (370 million)</para></listitem>
+      <!-- 87.68% --><listitem><para>Hungarian (14.5 million)</para></listitem>
+      <!-- 84.56% --><listitem><para>Italian (60 million)</para></listitem>
+      <!-- 100.00% --><listitem><para>Japanese (over 125 million)</para></listitem>
+      <!-- 91.54% --><listitem><para>Korean (75 million)</para></listitem>
+      <!-- 93.20% --><listitem><para>Lithuanian (4 million)</para></listitem>
+      <!-- 94.53% --><listitem><para>Norwegian Bookmal (5 million)</para></listitem>
+      <!-- 82.56% --><listitem><para>Norwegian Nynorsk</para></listitem>
+      <!-- 100.00% --><listitem><para>Panjabi (60 million)</para></listitem>
+      <!-- 100.00% --><listitem><para>Polish (44 million)</para></listitem>
+      <!-- 100.00% --><listitem><para>Portuguese (43 million)</para></listitem>
+      <!-- 91.24% --><listitem><para>Russian (170 million)</para></listitem>
+      <!-- 100.00% --><listitem><para>Serbian (10 million)</para></listitem>
+      <!-- 100.00% --><listitem><para>Spanish (over 350 million)</para></listitem>
+      <!-- 94.23% --><listitem><para>Swedish (9 million)</para></listitem>
+      <!-- 99.65% --><listitem><para>Tamil (61 million)</para></listitem>
+      <!-- 96.51% --><listitem><para>Turkish (150 million)</para></listitem>
+      <!-- 99.99% --><listitem><para>Ukrainian (50 million)</para></listitem>
   </para>
   
-  <para>Note that Basque, Bulgarian, Gujarati, Hungarian, Panjabi and Tamil
+  <para>Note that Basque, Bulgarian, Gujarati, Hindi, Hungarian, Norwegian Nynorsk, Panjabi and Tamil
   are new supported languages in GNOME &version;,
   thanks to the hard work of their translators. Note that British English
   and Canadian English are also supported.</para>
   
-  <para>Another xx languages are partially supported, with more than half of
-  their strings translated. Slovak and Norwegian Nynorsk are particularly close to &quot;supported&quot; status.</para>
+  <para>Another 12 languages are partially supported, with more than half of
+  their strings translated. Chinese Traditional, Croatian, Malay, Mongolian and Welsh are particularly close to &quot;supported&quot; status.</para>
 </sect1>
