@@ -1,3 +1,8 @@
+2004-09-10  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Update list of supported and "very close" (75%+)
+	languages.
+
 2004-09-09  Murray Cumming  <murrayc@murrayc.com>
 
 	* rnplatform.xml: Mentioned stuff. Seems dull though.
